mongo db url connect

--- a/BACKEND/.env
+++ b/BACKEND/.env
@@ -1,1 +1,1 @@
-MONGODB_URL = mongodb+srv://Kavindu:24112000k@kavindu.nfh61je.mongodb.net/?retryWrites=true&w=majority&appName=Kavindu
+MONGODB_URL = mongodb+srv://Kavindu:24112000k@kavindu.nfh61je.mongodb.net/user_db?retryWrites=true&w=majority&appName=Kavindu
